tests/cases/should_fail/misc/missing_default_value_in_function_literal.hash
// run=fail, stage=parse

// This test ensures that after a `:` there must be a specified type.

foo := (l: u32, k = ) -> u32 => { // error here!
    l * k
};
