tests/cases/should_fail/misc/missing_default_value_in_function_literal.stderr
error: expected an expression
 --> $DIR/missing_default_value_in_function_literal.hash:3:20
2 |   
3 |   foo := (l: u32, k = ) -> u32 => { // error here!
  |                      ^ here
4 |       l * k
